whoami-sample/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "whoami"
  namespace: "default"
spec:
  type: ClusterIP
  selector:
    app: "whoami"
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
